actualizo Git por error
Actualizo la pagina ya que mande un repositorio antiguo,

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
       
       <div class="gallery">
-        <h1 class="textoIntro">SixFive!</h1>
+        <h1 class="textoIntro"></h1>
         <p>Handcrafted
           <br> BURGERS & FRIES
           <br> <br></p>
